--- a/process_data.ipynb
+++ b/process_data.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
     "# ID,书名,引文,条目名（主题1）,卷数,卷名（主题0）,主题2,梦溪笔谈卷数,梦溪笔谈条目序数,卷题\n",
-    "with open(\"./副本引据与梦溪笔谈的关联.csv\", \"r\", encoding=\"utf-8-sig\") as csvfile:\n",
+    "with open(\"./引据与梦溪笔谈的关联_卷题类.csv\", \"r\", encoding=\"utf-8-sig\") as csvfile:\n",
     "    reader = csv.DictReader(csvfile)\n",
     "    data = [row for row in reader]\n",
     "\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,12 +47,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
-    "with open(\"book_tree.json\",\"w\", encoding=\"utf-8\") as f:\n",
+    "with open(\"book_tree_full.json\",\"w\", encoding=\"utf-8\") as f:\n",
     "    f.write(json.dumps(res, ensure_ascii=False))"
    ]
   }
@@ -73,7 +73,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
