hover meng effect

--- a/test.ipynb
+++ b/test.ipynb
@@ -46,7 +46,21 @@
     "        else:\n",
     "            res[d[attr]].append(d)\n",
     "    if current_level == len(book_level) - 1:\n",
-    "        return [{\"name\": name, \"level\": current_level, \"is_leaf\": True, \"children\":[], \"value\": value} for name, value in res.items()]\n",
+    "        return [\n",
+    "        { \n",
+    "            \"name\": name, \n",
+    "            \"level\": current_level, \n",
+    "            \"is_leaf\": True, \n",
+    "            \"children\":[], \n",
+    "            \"value\": value\n",
+    "            #     {\n",
+    "            #     \"name\": value['ID'],\n",
+    "            #     \"l0\": value['书名'],\n",
+    "            #     \"l1\": value['主题2'],\n",
+    "            #     \"l2\": value['卷名（主题0）'],\n",
+    "            #     \"l3\": value['条目名（主题1）']\n",
+    "            # }\n",
+    "        } for name, value in res.items()]\n",
     "    return [{\"name\": name, \"level\": current_level, \"is_leaf\": False, \"children\": value} for name, value in res.items()]\n",
     "\n",
     "def get_book_tree(data, book_level, current_level):\n",
