--- a/add_book_data.ipynb
+++ b/add_book_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
     "import csv\n",
     "\n",
     "# 读取JSON数据\n",
-    "with open('book_tree_full.json', 'r') as f:\n",
+    "with open('cited_tree.json', 'r') as f:\n",
     "    json_data = json.load(f)\n",
     "\n",
     "# 读取CSV数据\n",
